src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Are_you_working_on_another_company__c</fullName>
        <label>Are you working on another company?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_joining__c</fullName>
        <label>Date of joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Id__c</fullName>
        <label>Mail Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Number_of_remaining_days__c</fullName>
        <formula>TODAY() -  Date_of_joining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of remaining days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onbounded__c</fullName>
        <label>Onbounded</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_People__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other People</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <label>Selected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Salary__c</fullName>
        <label>Total Salary</label>
        <summarizedField>Salary__c.Amount__c</summarizedField>
        <summaryForeignKey>Salary__c.Employee_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_no_of_Salary_Component__c</fullName>
        <label>Total no. of Salary Component</label>
        <summaryForeignKey>Salary__c.Employee_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <recordTypes>
        <fullName>Applicant</fullName>
        <active>true</active>
        <label>Applicant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employee</fullName>
        <active>true</active>
        <label>Employee</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>department_should_not_contain_numbers</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Mobile_Number__c )</errorConditionFormula>
        <errorMessage>Mobile number is missing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>if_selected_then_DOJ_must</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Selected__c , &quot;Yes&quot;) &amp;&amp;  ISBLANK( Date_of_joining__c )</errorConditionFormula>
        <errorMessage>If you are selected, enter the joining date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>onbounding</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Selected__c , &quot;Yes&quot;) &amp;&amp;  ISPICKVAL( Onbounded__c , &quot;Yes&quot;)  &amp;&amp;  (TODAY() -  Date_of_joining__c &lt;0)</errorConditionFormula>
        <errorMessage>date of joining must need to be greater or equal to current date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>onbounding_says_no</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Selected__c , &quot;Yes&quot;) &amp;&amp; ISPICKVAL( Onbounded__c , &quot;No&quot;) &amp;&amp; ( TODAY() - Date_of_joining__c )&lt;=0 || ISPICKVAL( Selected__c , &quot;Yes&quot;) &amp;&amp; ISPICKVAL( Onbounded__c , &quot;No&quot;) &amp;&amp; ( TODAY() - Date_of_joining__c )&gt;0</errorConditionFormula>
        <errorMessage>Apply when you are joining</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>selected_is_no</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Selected__c , &quot;No&quot;) &amp;&amp;  ISPICKVAL( Onbounded__c , &quot;Yes&quot;) &amp;&amp; ( TODAY() - Date_of_joining__c ) &lt;=0 || ISPICKVAL( Selected__c , &quot;No&quot;) &amp;&amp;  ISPICKVAL( Onbounded__c , &quot;No&quot;) &amp;&amp; ( TODAY() - Date_of_joining__c ) &lt;=0 || ISPICKVAL( Selected__c , &quot;No&quot;) &amp;&amp;  ISPICKVAL( Onbounded__c , &quot;No&quot;) &amp;&amp; ( TODAY() - Date_of_joining__c ) &gt;0</errorConditionFormula>
        <errorMessage>if no selected then please don&apos;t apply</errorMessage>
    </validationRules>
</CustomObject>